<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidIntent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intent_transmit">通过intent传输数据给另一个intent</string>
    <string name="contact">联系人</string>
    <string name="HomeScreen">HomeScreen</string>
    <string name="search">search</string>
    <string name="static_broad">静态广播</string>
    <string name="dynamic_broad">动态广播</string>
    

</resources>