<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_broad_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/static_broad" />

    <Button
        android:id="@+id/btn_broad_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_broad" />

    <Button
        android:id="@+id/btn_intent_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_transmit" />

    <Button
        android:id="@+id/btn_intent_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact" />

    <Button
        android:id="@+id/btn_intent_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HomeScreen" />

    <Button
        android:id="@+id/btn_intent_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

</LinearLayout>